# Data-Analytics-Assistant

./: .env  NOTICE.txt  README.md  docker-compose.yaml  osm_mcp_server.py
agents/: .py  __init__.py  agent_system_prompt.txt  agents.py  chart_tool.py  chat_chart_react.py  dictionary_tool.py  feature_group_icons.json
analytic_assistant_build/: dockerfile.local  dockerfile.openai  pyproject.local.toml  pyproject.openai.toml
db_build/: dockerfile
db_build/init_db/: pearson.sql
dictionary_data/: index.faiss  index.pkl
documentation/: architecture.md  installation.md  usage.md
etl_build/: dockerfile.local  dockerfile.openai
etl_notebooks/: dictionary.csv  extract_transform_ahrq.ipynb  load_database.ipynb  test sql.ipynb
etl_notebooks/.Trash-0/files/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  env1.ipynb
etl_notebooks/.Trash-0/info/: Untitled.ipynb.trashinfo  Untitled1.ipynb.trashinfo  Untitled2.ipynb.trashinfo  Untitled3.ipynb.trashinfo  Untitled4.ipynb.trashinfo  env1.ipynb.trashinfo
etl_notebooks/.ipynb_checkpoints/: ahrq-checkpoint.xlsx  dataAHRQCountySDOH old-checkpoint.ipynb  dataAHRQCountySDOH-checkpoint.ipynb  define_sdoh_database-checkpoint.ipynb  extract_transform_ahrq-checkpoint.ipynb  load_database-checkpoint.ipynb  test sql-checkpoint.ipynb
mcp_server_build/: dockerfile
osm_mcp_server_build/: dockerfile  pyproject.toml
