[project]
name = "osm-mcp-server"
version = "0.1.1"
description = "An OpenStreetMap MCP server"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110.0",
  "aiohttp>=3.11.13",
  "fastmcp>=0.2.0",
  "uvicorn[standard]>=0.27.0"
]


[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
osm-mcp-server = "osm_mcp_server:main"

[tool.hatch.build.targets.wheel]
include = ["osm_mcp_server.py"]